--- a/TMS/TMS/Views/Shared/TMSLayout.cshtml
+++ b/TMS/TMS/Views/Shared/TMSLayout.cshtml
@@ -151,10 +151,6 @@
                                 <span class="label label-primary pull-right">4</span>
                             </span>
                         </a>
-                        <ul class="treeview-menu">
-                            <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> New Ticket</a></li>
-                            <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Asigned Ticket</a></li>
-                        </ul>
                     </li>
                     <li>
 
@@ -162,16 +158,19 @@
                         <a href="#">
                             <i class="fa fa-dashboard"></i> <span>SOLUTION</span>
                         </a>
-                        <ul class="treeview-menu">
-                            <li><a href="index.html"><i class="fa fa-circle-o"></i> Printer</a></li>
-                            <li class="active"><a href="index2.html"><i class="fa fa-circle-o"></i> Laptop</a></li>
-                        </ul>
                     </li>
 
                     <li class="treeview active">
                         <a href="#">
                             <i class="fa fa-laptop"></i>
-                            <span>CUSTOMER</span>
+                            <span>REQUESTER</span>
+                        </a>
+                    </li>
+
+                    <li class="treeview active">
+                        <a href="#">
+                            <i class="fa fa-laptop"></i>
+                            <span>HELP DESK</span>
                         </a>
                     </li>
 
@@ -180,10 +179,13 @@
                             <i class="fa fa-pie-chart"></i>
                             <span>REPORT</span>
                         </a>
-                        <ul class="treeview-menu">
-                            <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> Request</a></li>
-                            <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Problem</a></li>
-                        </ul>
+                    </li>
+
+                    <li class="treeview active">
+                        <a href="#">
+                            <i class="fa fa-gears"></i>
+                            <span>SYSTEM CONFIG</span>
+                        </a>
                     </li>
 
                 </ul>
