add new repository and serive

--- a/TMS/TMS/Views/Shared/TMSLayout.cshtml
+++ b/TMS/TMS/Views/Shared/TMSLayout.cshtml
@@ -155,8 +155,8 @@
                     <li>
 
                     <li class="treeview active">
-                        <a href="#">
-                            <i class="fa fa-dashboard"></i> <span>SOLUTION</span>
+                        <a href="/KnowledgeBase/">
+                            <i class="fa fa-dashboard"></i> <span>KNOWLEDGE BASE</span>
                         </a>
                     </li>
 
