--- a/TMS/TMS/Views/Tickets/Index.cshtml
+++ b/TMS/TMS/Views/Tickets/Index.cshtml
@@ -1,12 +1,8 @@
-﻿@{
-    Layout = "~/Views/Shared/TMSLayout.cshtml";
-}
-@model IEnumerable<TMS.Models.Ticket>
+﻿@model IEnumerable<TMS.Models.Ticket>
 
 @{
-    ViewBag.Title = "Ticket";
+    ViewBag.Title = "Index";
 }
-
 
 <h2>Index</h2>
 
@@ -16,19 +12,76 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.subject)
+            @Html.DisplayNameFor(model => model.Type)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.description)
+            @Html.DisplayNameFor(model => model.Mode)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.type)
+            @Html.DisplayNameFor(model => model.ImpactDetail)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.status)
+            @Html.DisplayNameFor(model => model.Status)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.assignee)
+            @Html.DisplayNameFor(model => model.Subject)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Solution)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UnapproveReason)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ScheduleStartDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ScheduleEndDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ActualStartDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ActualEndDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.SolvedDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CreatedTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ModifiedTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AspNetUser.SecurityStamp)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AspNetUser1.SecurityStamp)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AspNetUser2.SecurityStamp)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AspNetUser3.SecurityStamp)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Category.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Department.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Impact.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Priority.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Urgency.Name)
         </th>
         <th></th>
     </tr>
@@ -36,30 +89,83 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.subject)
+            @Html.DisplayFor(modelItem => item.Type)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.description)
+            @Html.DisplayFor(modelItem => item.Mode)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.type)
+            @Html.DisplayFor(modelItem => item.ImpactDetail)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.status)
+            @Html.DisplayFor(modelItem => item.Status)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.assignee)
+            @Html.DisplayFor(modelItem => item.Subject)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Solution)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UnapproveReason)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ScheduleStartDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ScheduleEndDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ActualStartDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ActualEndDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.SolvedDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CreatedTime)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ModifiedTime)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AspNetUser.SecurityStamp)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AspNetUser1.SecurityStamp)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AspNetUser2.SecurityStamp)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AspNetUser3.SecurityStamp)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Category.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Department.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Impact.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Priority.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Urgency.Name)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
 
 </table>
-
-
-@section Scripts {
-}
