--- a/TMS/TMS/Views/Tickets/Index.cshtml
+++ b/TMS/TMS/Views/Tickets/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@model IEnumerable<TMS.Models.Ticket>
 
 @{
-    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/TMSLayout.cshtml";
+}
+
+@{
+    ViewBag.Title = "Ticket";
 }
 
 <h2>Index</h2>
