--- a/TMS/TMS/Views/Tickets/Create.cshtml
+++ b/TMS/TMS/Views/Tickets/Create.cshtml
@@ -34,7 +34,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SolveID, "SolveID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("SolveID", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownList("SolveID", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.DropDownListFor(m => m.SolveID, (SelectList) ViewBag.SolveID, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SolveID, "", new { @class = "text-danger" })
             </div>
         </div>
