add admin area handle create requester @huy

--- a/TMS/TMS/Content/Site.css
+++ b/TMS/TMS/Content/Site.css
@@ -21,4 +21,9 @@ input,
 select,
 textarea {
     max-width: 280px;
-}*/
+}
+
+.content-wrapper {
+    padding-top: 20px;
+    padding-left: 20px;
+}
